--- a/changelog.txt
+++ b/changelog.txt
@@ -1,9 +1,11 @@
 Version: 0.0.15
   Bugfixes:
     - Fixed ghost wall not rebuilding solar interface
+  Features:
+    - Added settings to change Solar Wall health
   Changes:
-    - Migrated prototypes: stone-wall-2 -> stone-wall
-    - default stack size back to 100
+    - Migrated prototypes: from "solar-wall-2" to "solar-wall"
+    - Default stack size back to 100
     - Refactored scripts to improve future compatibility
 ---------------------------------------------------------------------------------------------------
 Version: 0.0.14 (by RedRafe)
