--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 2.0.0
+Date: 2024-11-18
+  Changes:
+    - Updated to 2.0
+---------------------------------------------------------------------------------------------------
 Version: 0.0.16
 Date: 2023.04.01
   Bugfixes:
