--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 2.0.2
+Date: 2024-11-12
+  Changes:
+    - Added CN translation
+---------------------------------------------------------------------------------------------------
 Version: 2.0.1
 Date: 2024-11-18
   Changes:
